more methods and some fixes

--- a/chapter1.tex
+++ b/chapter1.tex
@@ -276,15 +276,15 @@ The results from the barcoded and regional sequencing screens do not scale linea
 
 Imputation of missing values was performed using RandomForest Regression~\cite{breiman_random_2001}. The following intrinsic features were generated: The confidence-weighted average fitness across mutations at the same position; The average fitness of multi-mutant clones that contain the mutation of interest; the estimated fitness according to a multiplicative model to infer mutant fitness A using a double mutant AB and single mutant B.
 A second set of features was computed from differences between various chemical properties of the wildtype and mutant amino acids. These properties include size, volume, polarity, charge, hydropathy.
-A third set of features is derived from the structural context of each amino acid position. This includes secondary structure, solvent accessibility, burial in interfaces with different interaction partners and involvement in hydrogen bonds or salt bridges with interaction partners. Secondary structures were calculated using Stride~\cite{frishman_knowledge-based_1995}. Solvent accessibility and interface burial were calculated using the GETAREA tool~\cite{fraczkiewicz_exact_1998} on the following PDB entries: 3UIP~\cite{gareau_determinants_2012}; 4W5V~\cite{reiter_characterization_2016}; 3KYD~\cite{olsen_active_2010}; 2UYZ~\cite{knipscheer_noncovalent_2007}; 4Y1L~\cite{alontaga_rwd_2015}. Hydrogen bonds and salt bridges candidates were predicted using FreeMol and evaluated for validity by manual inspection.
+A third set of features is derived from the structural context of each amino acid position. This includes secondary structure, solvent accessibility, burial in interfaces with different interaction partners and involvement in hydrogen bonds or salt bridges with interaction partners. Secondary structures were calculated using Stride~\cite{frishman_knowledge-based_1995}. Solvent accessibility and interface burial were calculated using the GETAREA tool~\cite{fraczkiewicz_exact_1998} on the following PDB entries: 3UIP~\cite{gareau_determinants_2012}; 4W5V~\cite{reiter_characterization_2016}; 3KYD~\cite{olsen_active_2010}; 2UYZ~\cite{knipscheer_noncovalent_2007}; 4Y1L~\cite{alontaga_rwd_2015}. Hydrogen bonds and salt bridges candidates were predicted using OpenPyMol~\cite{schrodinger_pymol_2016} and evaluated for validity by manual inspection.
 Additional features used are the PROVEAN~\cite{choi_predicting_2012} and BLOSUM~\cite{henikoff_amino_1992} scores for a given amino acid change and the evolutionary conservation of the amino acid position. Conservation was obtained by generating a multiple alignment of direct functional orthologues across many eukaryotic species using CLUSTAL~\cite{russell_clustal_2014}, which was used as input for AMAS~\cite{livingstone_protein_1993}.
 
-The machine-learning predictions resulting generated above were also used to regularize experimental measurements of lower confidence. To this end the corrected standard error associated with each datapoint can be used to determine the weight of assigned to the measurement, as follows:
+The machine-learning predictions resulting generated above were also used to regularize experimental measurements of lower confidence. To this end the corrected standard error associated with each data point can be used to determine the weight of assigned to the measurement, as follows:
 $$s_\text{joint} = \frac{1}{\frac{1}{\sigma_{\bar x}^{(0)}}+\frac{1}{\sigma_{\bar x}^{(1)}}}(\frac{1}{\sigma_{\bar x}^{(0)}} s'_0 + \frac{1}{\sigma_{\bar x}^{(1)}}s'_1),$$
 where $s'_0$ is machine learning prediction, $\sigma_{\bar x}^{(0)}$ is the prediction standard error approximated by RMSD, $s'_1$ is the experimental fitness measurement, and $\sigma_{\bar x}^{(1)}$ is the assocated adjusted standard error.
 
 The joining, imputation and regularization procedures are implemented as part of a larger DMS analysis package provided on the attached storage media. It is also available online\footnote{http://dalai.mshri.on.ca/$\sim$jweile/projects/popcodePipeline/doc}.
 
 \subsection{Complementation spotting assays}
-To validate the reliability of the fitness scores obtained during the screen, we selected a subset of clones from our original variant library that evenly covered the spectrum of scores present in the screen. After genotype verification using Sanger sequencing, \species{S. cerevisiae} \textit{ubc9-ts} strains were transformed, grown to saturation, spotted in 1/5 dilution steps and grown at the permissive and selective temperatures respectively for 48 hours in the presence of null and wildtype control. A custom software was developed to help organize and analyze image data from spotting assays. It is provided on the attached storage media and can also be found online\footnote{http://dalai.mshri.on.ca/$\sim$jweile/projects/PlateOrganizer/}.
+To validate the reliability of the fitness scores obtained during the screen, we selected a subset of clones from our original variant library that evenly covered the spectrum of scores present in the screen. After genotype verification using Sanger sequencing, \species{S. cerevisiae} \textit{ubc9-ts} strains were transformed, grown to saturation, spotted in 1/5 dilution steps and grown at the permissive and selective temperatures respectively for 48 hours in the presence of null and wildtype control. The laboratory procedures were performed by Jennifer Knapp. A custom software, PlateOrganizer, was developed to help organize and analyze image data from spotting assays. It is provided on the attached storage media and can also be found online\footnote{http://dalai.mshri.on.ca/$\sim$jweile/projects/PlateOrganizer/}.
 
