--- a/thesis.bib
+++ b/thesis.bib
@@ -1068,7 +1068,7 @@ Just as reference genome sequences revolutionized human genetics, reference maps
 }
 
 @article{fields_novel_1989,
-	title = {A novel genetic system to detect proteinprotein interactions},
+	title = {A novel genetic system to detect protein-protein interactions},
 	volume = {340},
 	copyright = {© 1989 Nature Publishing Group},
 	issn = {0028-0836},
@@ -2196,4 +2196,33 @@ View full text},
 	keywords = {Meiosis, SUMO, synaptomenal complex, Ulp2, Zip1, Zip3},
 	pages = {2067--2081},
 	file = {Full Text PDF:/home/jweile/.zotero/zotero/hdsrba5p.default/zotero/storage/HHP6T754/Cheng et al. - 2006 - SUMO modifications control assembly of synaptonema.pdf:application/pdf;Snapshot:/home/jweile/.zotero/zotero/hdsrba5p.default/zotero/storage/DZCQM8RS/2067.html:text/html}
+}
+
+@misc{eklund_bee_2016,
+	title = {The {Bee} {Swarm} {Plot}, an {Alternative} to {Stripchart}},
+	shorttitle = {beeswarm},
+	url = {https://CRAN.R-project.org/package=beeswarm},
+	author = {Eklund, Aron},
+	year = {2016}
+}
+
+@misc{schrodinger_pymol_2016,
+	title = {The {PyMOL} {Molecular} {Graphics} {System}},
+	author = {{Schrödinger}},
+	year = {2016}
+}
+
+@article{benjamini_controlling_1995,
+	title = {Controlling the {False} {Discovery} {Rate}: {A} {Practical} and {Powerful} {Approach} to {Multiple} {Testing}},
+	volume = {57},
+	issn = {0035-9246},
+	shorttitle = {Controlling the {False} {Discovery} {Rate}},
+	url = {http://www.jstor.org/stable/2346101},
+	abstract = {The common approach to the multiplicity problem calls for controlling the familywise error rate (FWER). This approach, though, has faults, and we point out a few. A different approach to problems of multiple significance testing is presented. It calls for controlling the expected proportion of falsely rejected hypotheses-the false discovery rate. This error rate is equivalent to the FWER when all hypotheses are true but is smaller otherwise. Therefore, in problems where the control of the false discovery rate rather than that of the FWER is desired, there is potential for a gain in power. A simple sequential Bonferroni-type procedure is proved to control the false discovery rate for independent test statistics, and a simulation study shows that the gain in power is substantial. The use of the new procedure and the appropriateness of the criterion are illustrated with examples.},
+	number = {1},
+	urldate = {2017-03-02},
+	journal = {Journal of the Royal Statistical Society. Series B (Methodological)},
+	author = {Benjamini, Yoav and Hochberg, Yosef},
+	year = {1995},
+	pages = {289--300}
 }
