more references for intro

--- a/introduction.tex
+++ b/introduction.tex
@@ -94,9 +94,9 @@ Deep Mutational Scanning, as performed in these studies, can be broken down into
 % \end{table}
 
 
-\paragraph{Mutagenesis approaches:} A fair number of saturation mutagenesis methods have previously been applied in DMS studies; some of them more technically challenging than others. The simplest method is error-prone PCR amplification~\cite{mohan_pcr_2011} \todo{Find a citation for the first error-prone PCR}. While this has the advantage of being an inexpensive and facile procedure, it will only result in the generation of point mutations and as such will not generate all possible amino acid replacements. One may argue that the evaluation of VUS does not require insight into mutations outside of these variants. Nonetheless, exploring all possible amino acid changes beckons the potential of valuable biochemical insights. 
+\paragraph{Mutagenesis approaches:} A fair number of saturation mutagenesis methods have previously been applied in DMS studies; some of them more technically challenging than others. The simplest method is error-prone PCR amplification~\cite{cadwell_mutagenic_1994,mohan_pcr_2011}. While this has the advantage of being an inexpensive and facile procedure, it will only result in the generation of point mutations and as such will not generate all possible amino acid replacements. One may argue that the evaluation of VUS does not require insight into mutations outside of these variants. Nonetheless, exploring all possible amino acid changes beckons the potential of valuable biochemical insights. 
 
-Another set of methods often employed are scaled-up versions of site-directed mutagenesis approaches~\cite{seyfang_multiple_2004,firnberg_pfunkel:_2012}, with one popular example being Kunkel mutagenesis~\cite{kunkel_rapid_1985}. It uses a special strain of \species{E.~coli} that has been modified to produce high levels of uridine and lacks the ability to excise these bases from DNA. A phage vector carrying the desired template sequence is transfected into the cells resulting in its replication with a high uracil incorporation rate. The thus uracilated template can be PCR amplified with primers containing the mutations of interest and subsequently amplified in regular \species{E.~coli} which will degrade the uracilated template, thus enriching the mutant copies. A number of derivatives of Kunkel mutagenesis have since been developed to bring its output to a scale supporting saturated libraries, most notably Pfunkel~\cite{firnberg_pfunkel:_2012}.
+Another set of methods often employed are scaled-up versions of site-directed mutagenesis approaches~\cite{hutchison_mutagenesis_1978,seyfang_multiple_2004,firnberg_pfunkel:_2012}, with one popular example being Kunkel mutagenesis~\cite{kunkel_rapid_1985}. It uses a special strain of \species{E.~coli} that has been modified to produce high levels of uridine and lacks the ability to excise these bases from DNA. A phage vector carrying the desired template sequence is transfected into the cells resulting in its replication with a high uracil incorporation rate. The thus uracilated template can be PCR amplified with primers containing the mutations of interest and subsequently amplified in regular \species{E.~coli} which will degrade the uracilated template, thus enriching the mutant copies. A number of derivatives of Kunkel mutagenesis have since been developed to bring its output to a scale supporting saturated libraries, most notably Pfunkel~\cite{firnberg_pfunkel:_2012}.
 To address the full spectrum of amino acids at a given position, oligonucleotides carrying degeneracy codons~\cite{pal_methods_2005} are often used. Particularly popular is the use of \texttt{NNK} and \texttt{NNS} degeneracies, which have long been used in biochemistry~\cite{scott_searching_1990,barbas_semisynthetic_1992}. Here, \texttt{S} denotes either Guanine or Cytosine and \texttt{K} denotes either Guanine or Thymine in the third position of the degenerate codon. Either of these options only enables 32 out of all 64 possible codons, but they do cover all 20 possible amino acids while avoiding two of the three possible stop codons (opal and ochre). A more recent development is the use of custom oligonucleotide arrays covering all possible (or desired) options of codon changes~\cite{kitzman_massively_2015} explicitly rather than relying on degeneracy. While this option allows for the precise control of desired mutations, it is currently too expensive to be applicable for more than a handful of genes at a time.
 
 Another saturation mutagenesis method often applied in Deep Mutational Scanning is EMPIRIC (``Extremely Methodical and Parallel Investigation of Randomized Individual Codons'')~\cite{hietpas_experimental_2011}. In this method, rather than using PCR amplification amplification, oligonucleotide cassettes carrying the variants of interest are directly ligated at the appropriate positions. This is achieved by designing the underlying vector such that it omits the cassette sequence. Instead, it carries a restriction site at the equivalent position, which can be cut to create sticky ends. Pairs of oligos carrying the variants of interest can be synthesized such that they can assemble into a fitting cassette that integrates with the vector.
