--- a/thesis.bib
+++ b/thesis.bib
@@ -2226,3 +2226,36 @@ View full text},
 	year = {1995},
 	pages = {289--300}
 }
+
+@article{hutchison_mutagenesis_1978,
+	title = {Mutagenesis at a specific position in a {DNA} sequence},
+	volume = {253},
+	issn = {0021-9258},
+	abstract = {Predefined changes in a known DNA sequence were introduced by a general method. Oligodeoxyribonucleotides complementary to positions 582 to 593 of the viral DNA strand of the bacteriophage phiX174 am3 mutant (pGTATCCTACAAA), and to the wild type sequence in this region (pGTATCCTACAAA), were synthesized and used as specific mutagens. Each of these oligonucleotides was incorporated into a complete circular complementary strand when used as primer on a genetically heterologous viral strand template, by the combined action of subtilisin-treated Escherichia coli DNA polymerase I and T4 DNA ligase. Incomplete duplexes were removed or were inactivated by nuclease S1 and the products were used to transfect spheroplasts of E. coli. Both oligonucleotides induced specific mutations at high efficiency when used with heterologous template (15\% mutants among progeny phage). The am phages isolated by this procedure are phenotypically gene E mutants, and contain A at position 587 of the viral strand. They thus appear identical with am3 and provide evidence that the change G leads to A at position 587 is sufficient to produce a defective E function. Since the template for the induction of am mutants carried another genetic marker (sB1), the strains carrying the induced mutations have the new genotype am3 sB1. It should be possible to introduce the am3 mutation into any known mutant strain of phi174 using this same oligonucleotide. Both possible transition mutations were induced in these experiments. In principle, the method could also induce transversions, insertions, and deletions. The method should be applicable to other circular DNAs of similar size, for example recombinant DNA plasmids.},
+	language = {eng},
+	number = {18},
+	journal = {The Journal of Biological Chemistry},
+	author = {Hutchison, C. A. and Phillips, S. and Edgell, M. H. and Gillam, S. and Jahnke, P. and Smith, M.},
+	month = sep,
+	year = {1978},
+	pmid = {681366},
+	keywords = {Base Sequence, Coliphages, DNA, Viral, Mutagens, Mutation, Oligodeoxyribonucleotides, Oligonucleotides, Templates, Genetic},
+	pages = {6551--6560}
+}
+
+@article{cadwell_mutagenic_1994,
+	title = {Mutagenic {PCR}},
+	volume = {3},
+	issn = {1088-9051, 1549-5469},
+	url = {http://genome.cshlp.org/content/3/6/S136},
+	language = {en},
+	number = {6},
+	urldate = {2017-03-02},
+	journal = {Genome Research},
+	author = {Cadwell, R. C. and Joyce, G. F.},
+	month = jun,
+	year = {1994},
+	pmid = {7920233},
+	pages = {S136--S140},
+	file = {Full Text PDF:/home/jweile/.zotero/zotero/hdsrba5p.default/zotero/storage/7TBATWDK/Cadwell and Joyce - 1994 - Mutagenic PCR..pdf:application/pdf;Snapshot:/home/jweile/.zotero/zotero/hdsrba5p.default/zotero/storage/XJKPH362/S136.html:text/html}
+}
